--- a/source/_posts/2017年10月书单.md
+++ b/source/_posts/2017年10月书单.md
@@ -17,7 +17,18 @@ tags:
 #### 《围城》
 
 本人对于这本书中的一些印象深刻的句子：
+
 > 人生是围城，婚姻是围城，进去了，就被生存的种种烦愁包围。城里的人想出来，城外的人想进去。
+
+> 爱情与性欲一胞双生，类而不同，性欲并非爱情的基本，爱情也不是性欲的升华。
+
+> 旅行是最劳顿，最麻烦，叫人本相毕现的时候。经过长期艰苦旅行而不彼此讨厌的人，才可以结交朋友
+
+> 我们一生对于最亲爱的人的想念，加起来恐怕不到一点钟，此外不过是念头在他身上瞥过，想到而已。
+
+> 从前愚民政策是不许人民受教育，现代愚民政策是只许热敏受某一种教育。
+
+
 
 其实对于很多未知事物，人都很向往，不止婚姻。没有得到之前，它看上去是多么的美好，但是得到之后，接触之后，也就发现了其中令人抗拒的糟粕。当你是在忍受不了了，就想逃离。
 
