--- a/source/_posts/2017年10月书单.md
+++ b/source/_posts/2017年10月书单.md
@@ -3,14 +3,14 @@ title: 2017年10月书单
 date: 2017-10-27 14:56:53
 tags: [书单]
 categories: reading
+password: password
 ---
-
+<!-- deleteAbove -->
 我想开始把自己看的一些书记录下来了，没有每周必看几本书的目标，也没有看书必写感悟的决心。
 
 只是一个程序员工作之余的读书随笔。
 
 书 ，不限种类，不限字数，一切从心（怂。。。哈哈）
-
 <!-- more -->
 
 
