--- a/source/_posts/输入提示防抖处理.md
+++ b/source/_posts/输入提示防抖处理.md
@@ -27,11 +27,11 @@ function debounce(){
 
 
 ### Lodash
-如果需要 debounce 和throttle 这两个方法，可以使用lodash来讲两个方法合成一个文件。
+如果需要 debounce 和throttle 这两个方法，可以使用lodash来将两个方法合成一个文件。
 
 ![lodash](/images/lodash.png)
 
-可以压缩后的文件还是很小的。
+压缩后的文件还是很小的。
 
 ### 参考
 
