--- a/source/_posts/输入提示防抖处理.md
+++ b/source/_posts/输入提示防抖处理.md
@@ -1,7 +1,8 @@
 ---
 title: 输入提示防抖处理
 date: 2018-02-25 13:28:05
-tags: [js,debounce,防抖]
+categories: js
+tags: [debounce,防抖]
 ---
 
 经常会有输入提示这种需求 ， 输入一个字符 提示出相应的可能提示搜索词，这种需求也很普遍了。
